--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
   <app-header>  </app-header> 
   <div style="background:yellow;height:85%">
-        <app-home > </app-home> 
+        <app-default > </app-default> 
   </div>
    <app-footer></app-footer> 
