--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,9 +5,9 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav">
-      <a class="nav-link active" href="#">Home <span class="sr-only">(current)</span></a>
-      <a class="nav-link" href="#">Features</a>
-      <a class="nav-link" href="#">Pricing</a>
+      <a class="nav-link active" routerLink = "/home">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-link" routerLink="features">Features</a>
+      <a class="nav-link" routerLink="aboutus">About Us</a>
       </div>
   </div>
 </nav>
